@startuml erd-database
title ERD — GpsGeoFenceApp (SQL Server)
skinparam defaultFontSize 10
hide methods

entity Pois {
  *Id : int PK
  --
  Name, Description
  Latitude, Longitude
  RadiusMeters, CooldownSeconds
  PriorityLevel, IsActive
  ConflictPolicy       /'PRIORITY_ONLY'|'FIFO'/
  AllowQueueWhenConflict : bit
  AudioSourceMode      /'AUDIO_FIRST'|'TTS_ONLY'|'AUDIO_ONLY'/
  CreatedAt, UpdatedAt
}

entity PoiLanguage {
  *IdLang : bigint PK
  --
  IdPoi FK, LanguageTag FK
  TextToSpeech
  ProAudioUrl
}

entity PoiMedia {
  *Idm : bigint PK
  --
  IdPoi FK
  Image, MapLink
}

entity PoiImages {
  *Id : bigint PK
  --
  IdPoi FK
  ImageUrl, SortOrder
}

entity Tours {
  *Id : int PK
  --
  Name, IsActive
}

entity TourPois {
  *TourId FK, *PoiId FK
  --
  SortOrder
}

entity Users {
  *UserId : uuid PK
  --
  Username, Mail
  PasswordHash
  PlanType /'FREE'|'PRO'/
  ProExpiryDate?
}

entity HistoryPoi {
  *Id : bigint PK
  --
  IdPoi FK, IdUser FK
  Quantity, LastVisitedAt
  TotalDurationSeconds
}

entity GuestDevices {
  *DeviceId : varchar PK
  --
  Platform, AppVersion
  LastLatitude?, LastLongitude?
  FirstSeenAt, LastActiveAt
}

entity PoiTickets {
  *Id : bigint PK
  --
  IdPoi FK, TicketCode
  LanguageTag, MaxUses, CurrentUses
}

entity AppDownloadSources {
  *SourceId : int PK
  --
  LocationName, CampaignCode
}

entity DailyUsageTracking {
  *EntityId + ActionType PK
  --
  UsedCount, LastResetAt
}

entity WebNarrationUsage {
  *PoiId FK + *DeviceKey PK
  --
  PlayCount, LastPlayedAt
}

entity Analytics_Visit {
  *Id : bigint PK
  --
  PoiId FK, Action, Timestamp
}

entity Analytics_ListenDuration {
  *Id : bigint PK
  --
  PoiId FK, DurationSeconds
}

Pois        ||--o{ PoiLanguage
Pois        ||--o{ PoiMedia
Pois        ||--o{ PoiImages
Pois        ||--o{ TourPois
Pois        ||--o{ PoiTickets
Pois        ||--o{ HistoryPoi
Pois        ||--o{ WebNarrationUsage
Pois        ||--o{ Analytics_Visit
Pois        ||--o{ Analytics_ListenDuration
Tours       ||--o{ TourPois
Users       ||--o{ HistoryPoi
AppDownloadSources ||--o{ Analytics_Visit
@enduml
